--- a/issues.mkd
+++ b/issues.mkd
@@ -1,8 +1,9 @@
 # Pending #
-- **[4]** Create a block that breaks when hit
+- **[5]** Make block disappear when hit
 
 # Resolved #
 
 - **[1]** Set up game window to startup when run
 - **[2]** Render paddle on game init
 - **[3]** Set up collision detection between paddle and ball
+- **[4]** Create a block that breaks when hit
