--- a/issues.mkd
+++ b/issues.mkd
@@ -1,5 +1,5 @@
 # Pending #
-- **[5]** Make block disappear when hit
+- **[6]** Control paddle movement with keyboard
 
 # Resolved #
 
@@ -7,3 +7,4 @@
 - **[2]** Render paddle on game init
 - **[3]** Set up collision detection between paddle and ball
 - **[4]** Create a block that breaks when hit
+- **[5]** Make block disappear when hit
