--- a/issues.mkd
+++ b/issues.mkd
@@ -1,5 +1,5 @@
 # Pending #
-- **[6]** Control paddle movement with keyboard
+- **[7]** Go into game over state when block hits the bottom of the screen
 
 # Resolved #
 
@@ -8,3 +8,4 @@
 - **[3]** Set up collision detection between paddle and ball
 - **[4]** Create a block that breaks when hit
 - **[5]** Make block disappear when hit
+- **[6]** Control paddle movement with keyboard
