--- a/issues.mkd
+++ b/issues.mkd
@@ -1,5 +1,5 @@
 # Pending #
-- **[11]** Update collision for all objects 
+- **[12]** Reset ball on game init
 
 # Resolved #
 
@@ -11,5 +11,6 @@
 - **[6]** Control paddle movement with keyboard
 - **[7]** Go into game over state when block hits the bottom of the screen
 - **[8]** Give the player three lives that are indicated with hearts
-- **[10]** Update ball collision for paddle
 - **[9]** Add more blocks that can be broken
+- **[10]** Update ball collision for paddle
+- **[11]** Update collision for all objects 
