--- a/issues.mkd
+++ b/issues.mkd
@@ -1,5 +1,5 @@
 # Pending #
-- **[14]** Create a second level as a game state
+- **[15]** Fix collision detection in startup state
 
 # Resolved #
 
@@ -16,3 +16,4 @@
 - **[11]** Update collision for all objects 
 - **[12]** Reset ball on game init
 - **[13]** Limit paddle movement to within the game window
+- **[14]** Create a second level as a game state
