--- a/issues.mkd
+++ b/issues.mkd
@@ -1,5 +1,5 @@
 # Pending #
-- **[16]** Add blocks to level 2 
+- **[17]** Refactor PlayingState into Level 1 and chain Level 1 and Level 2 together
 
 # Resolved #
 
@@ -18,3 +18,4 @@
 - **[13]** Limit paddle movement to within the game window
 - **[14]** Create a second level as a game state
 - **[15]** Fix collision detection in startup state
+- **[16]** Add blocks to level 2 
