--- a/issues.mkd
+++ b/issues.mkd
@@ -1,5 +1,5 @@
 # Pending #
-- **[18]** Prompt user to start Level 2
+- **[19]** Reset ball image at level 2 startup
 
 # Resolved #
 
@@ -20,3 +20,4 @@
 - **[15]** Fix collision detection in startup state
 - **[16]** Add blocks to level 2 
 - **[17]** Refactor PlayingState into Level 1 and chain Level 1 and Level 2 together
+- **[18]** Prompt user to start Level 2
