--- a/issues.mkd
+++ b/issues.mkd
@@ -1,5 +1,5 @@
 # Pending #
-- **[19]** Reset ball image at level 2 startup
+- **[20]** Introduce debugging level select feature
 
 # Resolved #
 
@@ -21,3 +21,4 @@
 - **[16]** Add blocks to level 2 
 - **[17]** Refactor PlayingState into Level 1 and chain Level 1 and Level 2 together
 - **[18]** Prompt user to start Level 2
+- **[19]** Reset ball image at level 2 startup
