--- a/issues.mkd
+++ b/issues.mkd
@@ -1,5 +1,5 @@
 # Pending #
-- **[21]** Introduce cheat code to break all blocks in a level
+- **[22]** Create a level class and refactor level1 and level2 to extend that class
 
 # Resolved #
 
@@ -23,3 +23,4 @@
 - **[18]** Prompt user to start Level 2
 - **[19]** Reset ball image at level 2 startup
 - **[20]** Introduce debugging level select feature
+- **[21]** Introduce cheat code to break all blocks in a level
