--- a/issues.mkd
+++ b/issues.mkd
@@ -1,5 +1,5 @@
 # Pending #
-- **[23]** Create level 3
+- **[24]** Fix heart rendering 
 
 # Resolved #
 
@@ -25,3 +25,4 @@
 - **[20]** Introduce debugging level select feature
 - **[21]** Introduce cheat code to break all blocks in a level
 - **[22]** Create a level class and refactor level1 and level2 to extend that class
+- **[23]** Create level 3
