--- a/issues.mkd
+++ b/issues.mkd
@@ -1,5 +1,5 @@
 # Pending #
-- **[30]** Add comments to code 
+- **[31]** Reset paddle on life lost
 
 # Resolved #
 
@@ -32,3 +32,4 @@
 - **[27]** Add music to splash screen and levels
 - **[28]** Take out any unused or unnecessary code
 - **[29]** Add some randomness to ball bouncing to enhance replayability
+- **[30]** Add comments to code 
